[gd_scene load_steps=2 format=3 uid="uid://w7ctytiilx6i"]

[ext_resource type="Script" uid="uid://2cqpkvl5o50i" path="res://Scenes/Endings/BadEnding.gd" id="1_rsb8r"]

[node name="BadEnding" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rsb8r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"
